WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215655
REGRESSION (
r263729
): Carousel freezes on "fourth page"/fourth click on right arrow on netflix.com
https://bugs.webkit.org/show_bug.cgi?id=215655
Summary
REGRESSION (r263729): Carousel freezes on "fourth page"/fourth click on right...
Wenson Hsieh
Reported
2020-08-19 10:35:46 PDT
<
rdar://problem/65845979
>
Attachments
Patch
(8.64 KB, patch)
2020-08-20 12:27 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Patch
(8.68 KB, patch)
2020-08-20 14:43 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-08-20 12:27:21 PDT
Created
attachment 406954
[details]
Patch
Dean Jackson
Comment 2
2020-08-20 12:35:39 PDT
Comment on
attachment 406954
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=406954&action=review
> Source/WebCore/ChangeLog:11 > + `translate` CSS properties to a container `div`, and adds a `transitionend` event listener which the page
did you mean `transition`?
Wenson Hsieh
Comment 3
2020-08-20 12:36:20 PDT
Comment on
attachment 406954
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=406954&action=review
>> Source/WebCore/ChangeLog:11 >> + `translate` CSS properties to a container `div`, and adds a `transitionend` event listener which the page > > did you mean `transition`?
Whoops, yes I did! Fixed.
Simon Fraser (smfr)
Comment 4
2020-08-20 12:36:46 PDT
Comment on
attachment 406954
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=406954&action=review
> Source/WebCore/ChangeLog:11 > + `translate` CSS properties to a container `div`, and adds a `transitionend` event listener which the page
Did you mean `translate` here, or `transition`?
> LayoutTests/animations/animation-followed-by-two-transitions.html:45 > + await UIHelper.delayFor(60);
Why 60ms?
Wenson Hsieh
Comment 5
2020-08-20 14:28:21 PDT
Comment on
attachment 406954
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=406954&action=review
>> LayoutTests/animations/animation-followed-by-two-transitions.html:45 >> + await UIHelper.delayFor(60); > > Why 60ms?
So when I originally wrote this, I noticed that some delay was needed to cause the test to fail without the change in this patch. After some experimentation I thought that I needed to match the duration of the transition that is ending (60ms), but now after more digging, I realized that this is not the case. In order for the test to exercise the bug, I need to wait long enough here for the CSSTransition that was created as a result of adding the "transition" class to complete (i.e. `DocumentTimeline::transitionDidComplete`). It seems this call happens during the next rendering update after `AnimationTimeline::updateCSSAnimationsForElement`, which happens during the next rendering update after replacing the "transition" class with "no-transition". As such, it should be sufficient to replace this hard-coded delay with two `await UIHelper.renderingUpdate();`s.
Wenson Hsieh
Comment 6
2020-08-20 14:43:32 PDT
Created
attachment 406969
[details]
Patch
EWS
Comment 7
2020-08-20 17:12:09 PDT
Committed
r265985
: <
https://trac.webkit.org/changeset/265985
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406969
[details]
.
Antoine Quint
Comment 8
2020-08-24 08:13:25 PDT
***
Bug 215159
has been marked as a duplicate of this bug. ***
Antoine Quint
Comment 9
2020-10-19 06:40:00 PDT
***
Bug 217061
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug